Added About Page and Optimized Overall Code.

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     {% include 'bootstrap.html' %}
-    <title>Weather App</title>
+    <title> WeatherToday </title>
 </head>
 
 <body>
@@ -13,7 +13,7 @@
         {% include 'banner.html' %}
     </div>
 
-    <div class="container mt-5">
+    <div class="container mt-4">
         <!-- Search Form -->
         <form method="POST" style="max-width: 400px; margin: 0 auto;">
             <div style="text-align: center;">
@@ -54,5 +54,6 @@
 
     </div>
 
+{% include 'contactus.html' %}
 </body>
 </html>
