--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -3,7 +3,7 @@
       <a class="navbar-brand" href="/"> Home </a>
   
       <div class="d-flex gap-3 ms-auto">
-        <a class="nav-link" href="/"> About </a>
+        <a class="nav-link" href="/aboutus"> About </a>
         <a class="nav-link" href="/"> Log In </a>
       </div>
   
