--- a/templates/index.html
+++ b/templates/index.html
@@ -52,6 +52,8 @@
             {% endif %}
         {% endif %}
 
+        {% include 'widget.html' %}
+
     </div>
 
 {% include 'contactus.html' %}
