--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -4,7 +4,7 @@
   
       <div class="d-flex gap-3 ms-auto">
         <a class="nav-link" href="/aboutus"> About </a>
-        <a class="nav-link" href="/"> Log In </a>
+        <a class="nav-link" href="/login"> Log In </a>
       </div>
   
     </div>
