--- a/templates/banner.html
+++ b/templates/banner.html
@@ -12,20 +12,20 @@
         margin-right: -50vw;
         width: 100vw;
         background-color: black;
-        margin-top: -20px; /* To remove gap between heading and logo */
+        margin-top: -20px; 
     }
 
     #banner {
         display: block;
         height: 200px;
-        width: 100%; /* Changed from 300% */
+        width: 100%; 
         object-fit: cover;
         margin: 0 auto;
-        max-width: 100vw; /* Changed to viewport width */
+        max-width: 100vw; 
     }
 </style>
 
 <div class="banner-container">
-    <img class="img-fluid mt-3" id="banner" src="/static/banner3.jpeg" alt="banner">
+    <img class="img-fluid mt-3" id="banner" src="/static/banner5.jpeg" alt="banner">
 </div>
 
