--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,13 +1,16 @@
 <nav class="navbar shadow-sm fixed-top bg-white">
-    <div class="container">
+  <div class="container">
       <a class="navbar-brand" href="/"> Home </a>
   
       <div class="d-flex gap-3 ms-auto">
-        <a class="nav-link" href="/aboutus"> About </a>
-        <a class="nav-link" href="/login"> Log In </a>
+          <a class="nav-link" href="/aboutus"> About </a>
+          {% if current_user.is_authenticated %}
+              <a class="nav-link" href="{{ url_for('logout') }}">Log Out</a>
+          {% else %}
+              <a class="nav-link" href="{{ url_for('login') }}">Log In</a>
+          {% endif %}
       </div>
-  
-    </div>
-  </nav>
-  
-  <div style="height: 56px"></div>
+  </div>
+</nav>
+
+<div style="height: 56px"></div>
