Changed Removed button.

--- a/templates/index.html
+++ b/templates/index.html
@@ -159,7 +159,7 @@
                                                 <button type="submit" class="btn btn-primary btn-sm">View</button>
                                             </form>
                                             <a href="{{ url_for('remove_city', city_name=city.city_name) }}" 
-                                               class="btn btn-danger btn-sm">Remove</a>
+                                               class="btn btn-outline-danger btn-sm">X</a>
                                         </div>
                                     </div>
                                 </div>
