Update Home Page.

--- a/templates/banner.html
+++ b/templates/banner.html
@@ -26,6 +26,6 @@
 </style>
 
 <div class="banner-container">
-    <img class="img-fluid mt-3" id="banner" src="/static/banner5.jpeg" alt="banner">
+    <img class="img-fluid mt-3" id="banner" src="/static/banner.jpeg" alt="banner">
 </div>
 
