--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -4,6 +4,7 @@
   
       <div class="d-flex gap-3 ms-auto">
           <a class="nav-link" href="/aboutus"> About </a>
+          <a class="nav-link" href="/news"> News </a>
           {% if current_user.is_authenticated %}
               <a class="nav-link" href="{{ url_for('logout') }}">Log Out</a>
           {% else %}
